# problem-solving-with-python

./: LICENSE  README.md  pyproject.toml
en/: _quarto.yml  index.qmd  references.bib  references.qmd
en/chapters/: chapter1.qmd  chapter2.qmd  chapter3.qmd  chapter4.qmd
en/code/chapter2/: receipt.py
en/code/chapter3/: receipt.py
en/code/chapter4/: receipt.py
