[project]
name = "problem-solving-with-python"
version = "0.1.0"
description = "Practical Problem Solving: From Computational Thinking to Programs with Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]
